REFACTOR: Deserialize the Event only once